fix(data-table): checkbox spacing

--- a/src/components/data-table-v2/_data-table-v2-core.scss
+++ b/src/components/data-table-v2/_data-table-v2-core.scss
@@ -71,7 +71,7 @@
   // Overrrides
   .bx--checkbox-label {
     margin-top: rem(-8px);
-    padding-left: rem(16px);
+    padding-left: rem(22px);
   }
 
   .bx--overflow-menu {
